add teclado interativo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
     <div id="root">
         <div id="bk"></div>
         <h1 id="cont"></h1>
+
     </div>
+    <div class="containerControl">
+        <span id="W">W</span>
+        <span id="A">A</span>
+        <span id="S">S</span>
+        <span id="D">D</span>
+    </div>
+
     
 </body>
 </html>
